# transcendence-memory-server

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  生产阶段问题.md
.github/workflows/: ci.yml
docs/: README.md  api-contract.md  api-contract.zh-CN.md  development-bootstrap.md  development-bootstrap.zh-CN.md  nginx-rag.zweiteng.tk.conf  server-boundary.md
docs/architecture/: lite-full-build-strategy.md
docs/deployment/: docker-deployment.md  environment-reference.md  environment-reference.zh-CN.md  quickstart.md  reverse-proxy.md  systemd-deployment.md
docs/evolution/: 20260325-rag-evolution-audit.md  README.md  phase-01-initial-eva-service-baseline.md  phase-02-lancedb-migration.md  phase-03-service-hardening-and-health.md  phase-04-skill-and-structured-ingest.md
docs/identity/: identity-backend.md  identity-both.md
docs/operations/: backup-restore.md  health-check.md  health-check.zh-CN.md  troubleshooting.md  upgrade-migration.md
scripts/: arch_detect.py  bootstrap_dev.sh  entrypoint.sh  generate_release_assets.py  load_rag_config.sh  preflight_check.sh  rag_engine.py  raganything_engine.py  run_task_rag_server.sh  smoke_test_client_ingest_search.py  smoke_test_client_ingest_wrapper_flow.py  sync_rclone_archive_to_memory_objects.py  task_rag_build_manifest.py  task_rag_embed.py  task_rag_ingest_memory_refs.py  task_rag_lancedb_ingest.py  task_rag_runtime.py  task_rag_search.py  task_rag_server.py  task_rag_server_models.py  task_rag_structured_ingest.py
src/tm_server/: __init__.py  __main__.py  cli.py
tasks_rag/: README.md
tests/: conftest.py  test_arch_detect.py  test_connection_token.py  test_container_management.py  test_crud_endpoints.py  test_error_scenarios.py  test_health_modules.py  test_task_rag_server_memory_objects.py
