[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "transcendence-memory-server"
version = "0.3.0"
description = "Self-hosted multimodal RAG memory service with LanceDB + RAG-Anything"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "lancedb>=0.4.0",
    "pyarrow>=12.0.0",
    "lightrag-hku>=1.4.0",
]

[project.optional-dependencies]
multimodal = ["raganything>=1.2.0"]
dev = ["pytest>=8.0.0", "httpx>=0.24.0"]

[project.scripts]
tm-server = "tm_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tm_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
addopts = "-q"
