[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "transcendence-memory-server"
version = "0.3.3"
description = "Self-hosted multimodal RAG memory service with LanceDB + RAG-Anything"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{name = "leekkk2"}]
keywords = ["rag", "memory", "fastapi", "lancedb", "lightrag", "vector-database", "multimodal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "lancedb>=0.4.0",
    "pyarrow>=12.0.0",
    "lightrag-hku>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/leekkk2/transcendence-memory-server"
Repository = "https://github.com/leekkk2/transcendence-memory-server"
Issues = "https://github.com/leekkk2/transcendence-memory-server/issues"

[project.optional-dependencies]
multimodal = ["raganything>=1.2.0"]
dev = ["pytest>=8.0.0", "httpx>=0.24.0"]

[project.scripts]
tm-server = "tm_server.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tm_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]
addopts = "-q"
